--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 nav {
   margin: 0;
   margin-bottom: 2rem;
-  background-color: #3CB083;
+  background-color: #2F73A1;
   padding: 1.5rem;
   color: rgb(240, 240, 240);
 }
@@ -32,11 +32,10 @@ nav > h1 {
   border-radius: 3px;
   margin-top: -1.5rem;
   padding: 15px;
-  background-color: #3CB083;
+  background-color: #2F73A1;
 }
 
-.inventory,
-.inventory-search {
+.inventory {
   background-color: #202940;
   position: relative;
   display: flex;
@@ -95,6 +94,10 @@ table tbody tr:nth-of-type(odd) {
   box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
   color: rgb(240, 240, 240);
 
+}
+
+.search {
+  margin-top: 1rem;
 }
 
 .inventory-input::placeholder,
